src/app/shared/header/menu/menu.component.scss
@use '../../../../styles/index' as *;

$menu-overlay-height: calc(100vh - $navHeight);

section {
  position: fixed;
  width: 100vw;
  max-width: 100%;
  height: $menu-overlay-height;
  background: $bg-color;
  z-index: 998;
  bottom: 0;
  overflow: hidden;
  padding: 0px 100px 0px 100px;
  @include dflex($fd: column);
  @media (max-width: 1200px) {
    padding: 0px 50px 0px 50px;
  }
  @media (max-width: 700px) {
    padding: 0px 25px 0px 25px;
  }
  &.open {
    animation: slideInFromTop 0.5s forwards;
  }
  &.close {
    animation: slideOutToTop 0.5s forwards;
  }
}
.menu-content {
  height: $menu-overlay-height;
  position: relative;
  width: 100vw;
  max-width: 1920px;
  .menu-links {
    caret-color: transparent;
    position: relative;
    z-index: 2;
    height: 70%;
    @include dflex($fd: column, $g: 40px);
    text-align: center;
    @media (max-width: 900px) {
      height: 62%;
    }
    a {
      font-size: 96px;
      font-weight: 700;
      padding: 4px 32px;
      transition: color 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
      cursor: pointer;
      @media (max-width: 1200px) {
        font-size: 8vw;
      }
      @media (max-width: 400px) {
        font-size: 10vw;
      }
      &:hover {
        color: #fff;
        box-shadow: inset 1200px 0 0 0 black;
      }
    }
  }
}

.bottom-menu {
  width: 100vw;
  position: absolute;
  bottom: 0;
  color: white;
  z-index: 1;
  max-width: 1920px;
  .rectangle {
    position: relative;
    height: 348px;
    background-image: url("./../../../../../public/assets/img/rectangle.svg");
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    .sayHello {
      position: absolute;
      margin-left: 100px;
      background: black;
      top: 150px;
      cursor: default;
      @include dflex($fd: column, $ai: start, $jc: start);
      @media (max-width: 1200px) {
        margin-left: 50px;
      }
      @media (max-width: 900px) {
        top: 220px;
      }
      @media (max-width: 700px) {
        margin-left: 25px;
      }
      span {
        font-weight: 800;
        font-size: 4.063vw;
        @media (max-width: 900px) {
          font-size: 32px;
        }
        &:hover {
          color: $color-highlight;
        }
      }
    }
    .menu-email {
      padding-inline: 100px;
      position: absolute;
      color: $color-highlight;
      bottom: 50px;
      width: 100%;
      @include dflex($ai: center, $jc: space-between);
      @media (max-width: 1200px) {
        padding-left: 50px;
      }
      @media (max-width: 700px) {
        padding-left: 25px;
      }
      a {
        cursor: pointer;
        font-family: Overpass;
        font-weight: 300;
        margin-top: 8px;
        color: white;
        font-size: 1.2vw;
        @media (max-width: 1200px) {
          font-size: 19px;
        }
        &:hover {
          color: $color-highlight;
        }
        @media (max-width: 600px) {
          font-size: 16px;
        }
      }
      .menu-icons {
        @include dflex($g: 2.7vw);
        @media (max-width: 900px) {
          display: none;
        }
        a svg {
          path {
            transition: fill 0.2s ease;
          }
          &:hover path {
            fill: $color-highlight;
          }
        }
      }
    }
  }
}

@keyframes slideInFromTop {
  0% {
    height: 0;
  }
  60% {
    height: $menu-overlay-height;
  }
  100% {
    height: $menu-overlay-height;
  }
}
@keyframes slideOutToTop {
  0% {
    height: $menu-overlay-height;
  }
  60% {
    height: 0;
  }
  100% {
    height: 0;
  }
}

